- Ajuste geral em componentes pertencentes ao processo-edit, corrigindo bugs diversos em juntadas, garantias, dados básicos de processo, remessa, criar cópia de documento, vinculação de processo e visibilidade

--- a/src/app/main/apps/processo/processo-edit/juntadas/documento-copia-create-bloco/documento-copia-create-bloco.component.scss
+++ b/src/app/main/apps/processo/processo-edit/juntadas/documento-copia-create-bloco/documento-copia-create-bloco.component.scss
@@ -6,5 +6,6 @@ documento-copia-create {
         flex: 1 1 auto;
         display: flex;
         overflow-y: auto;
+        flex-direction: column;
     }
 }
